# agent-os

./: .bazelignore  .bazelrc  .clang-format  .gitattributes  .gitignore  .oxfmtrc.json  .styluaignore  BUILD.bazel  LICENSE  MODULE.bazel  PERFORMANCE.md  README.md  RUN.md  SERVICES.md  SYSTEMS.md  TODO.md  VISION.md  install.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  stylua.toml  tsconfig.json  zig_index.json
bazel/: BUILD.bazel  asyncify.bzl  coreutils.bzl  elixir_transition.bzl  mc_box.bzl  mc_grammar.bzl  mc_program.bzl  release_wasm.bzl  rust_e2e_test.bzl  rust_opt_test.bzl  ts.bzl  wasm_opt.bzl
bazel/tools/: BUILD.bazel
bazel/tools/gh-release/: BUILD.bazel  defs.bzl  publish.mjs
bazel/tools/git-hooks/: BUILD.bazel  install.sh  pre-commit
bazel/tools/mc-abi-gate/: BUILD.bazel
bazel/tools/mc-applets/: BUILD.bazel
bazel/tools/mc-attest/: BUILD.bazel
bazel/tools/mc-grammar-gen/: BUILD.bazel  Cargo.toml  README.md
bazel/tools/mc-roster/: BUILD.bazel
bazel/tools/mc-stamp/: BUILD.bazel
bazel/tools/mc-svc-manifest/: BUILD.bazel
bazel/tools/readme-badges/: BUILD.bazel
bazel/tools/size/: BUILD.bazel  defs.bzl
bazel/tools/wasi-trampoline/: BUILD.bazel
bazel/tools/wasm-imports/: BUILD.bazel
bazel/tools/wasm-opt/: BUILD.bazel
contracts/: BUILD.bazel  README.md  bridge.kdl  constants.kdl  control.kdl  syscalls.kdl  wire.kdl
contracts/codegen/: BUILD.bazel  defs.bzl
contracts/codegen/src/: projector.rs
docs/: BUILD.bazel  advanced-api.md  api-surface.json  browser-elements.md  browser-sidecars.md  concepts.md  connections.md  create-options.md  cron.md  errors.md  execution-files.md  images-stores.md  index.md  installation.md  llb.md  mc.md  mounts-drivers.md  permissions.md  recording-remote-build.md  runtimes.md  shells-sessions.md  sidecars.md  snapshots.md  symbol-index.md  tools.md  vm.md
docs/tools/: check.mjs
hosts/js/: BUILD.bazel
hosts/wasmtime/: BUILD.bazel  Cargo.toml
hosts/wasmtime/src/: lib.rs  main.rs  persist.rs
images/: BUILD.bazel
kernel/rust/: BUILD.bazel  defs.bzl  size-limit.sh
kernel/rust/src/: bridge.rs  host_call.rs  init.rs  lib.rs
memcontainers/conformance/: BUILD.bazel  control_vectors.json  snapshot_vectors.json
memcontainers/conformance/src/: abi_test.rs  control_vectors_test.rs  runtime_test.rs
memcontainers/conformance/test/: control_vectors.test.ts
memcontainers/contracts/: BUILD.bazel  README.md  bridge.kdl  browser.kdl  constants.kdl  control.kdl  llb.kdl  package.json  runner.kdl  shell.kdl  sidecar.kdl  snapshot.kdl  syntax.kdl  syscalls.kdl  wire.kdl
memcontainers/contracts/codegen/: BUILD.bazel  defs.bzl
memcontainers/contracts/spec/: BUILD.bazel
memcontainers/contracts/test/: codec.test.ts  codec_test.rs  wire_projection_test.rs
memcontainers/images/: BUILD.bazel
memcontainers/kernel/: BUILD.bazel
memcontainers/kernel/interpreter/: BUILD.bazel
memcontainers/kernel/rust/: BUILD.bazel  Cargo.toml
memcontainers/kernel/zig/: BUILD.bazel  asyncify_no_creep.sh
memcontainers/pkgcore/: BUILD.bazel
memcontainers/pkgcore/src/: lib.rs
memcontainers/programs/: BUILD.bazel
memcontainers/programs/adapters/: BUILD.bazel
memcontainers/programs/browser/: BUILD.bazel
memcontainers/programs/coreutils/: BUILD.bazel  Cargo.toml  DESIGN.md
memcontainers/programs/invoke/: BUILD.bazel
memcontainers/programs/pkgfsd/: BUILD.bazel
memcontainers/programs/sh/: BUILD.bazel
memcontainers/programs/syntax/: SYSTEM.md
memcontainers/programs/tools/: BUILD.bazel
memcontainers/shcore/: BUILD.bazel
memcontainers/shcore/src/: arith.zig  ast.rs  ast.zig  builtins.zig  completion.zig  echo.zig  exec.zig  expand.rs  expand.zig  glob.zig  lib.rs  os.rs  os.zig  parser.rs  parser.zig  printf.zig  shcore.zig  testexpr.zig  token.rs  token.zig  word.zig
memcontainers/toolcore/: BUILD.bazel
memcontainers/toolcore/src/: lib.rs
memcontainers/wasi-adapter/: BUILD.bazel  close_shim.c
memcontainers/wasi-adapter/src/: lib.rs
programs/coreutils/: BUILD.bazel  Cargo.toml
programs/coreutils/src/: fsutil.rs  main.rs  mcbox.rs
server/: BUILD.bazel  mix.exs
server/lib/agent_os/: application.ex  control_plane.ex  guest_layers.ex  sidecars.ex  supervisor.ex  vm.ex
server/native/sidecar-helper/: BUILD.bazel  sidecar-helper.conf
server/otp_hello/: BUILD.bazel  mix.exs
server/otp_hello/lib/: otp_hello_mix.ex
server/otp_hello/test/: otp_hello_mix_test.exs
server/sidecars/: BUILD.bazel  README.md
server/sidecars/browser/: BUILD.bazel  bridge.zig  defs.bzl  init.sh  service.ts
server/sidecars/runner/: BUILD.bazel  guest.zig  mkinitramfs.rs
server/test/: test_helper.exs
server/test/agent_os/: browser_firecracker_test.exs  control_plane_test.exs  firecracker_test.exs  guest_layers_test.exs  (+1 more)
shcore/: BUILD.bazel
shcore/src/: arith.rs  echo.rs  glob.rs  lib.rs  printf.rs  testexpr.rs  word.rs
sysroot/: BUILD.bazel  defs.bzl
sysroot/rust/: BUILD.bazel
sysroot/src/: lib.rs  sys.rs
sysroot/zig/: BUILD.bazel  mc.zig  svc.zig
toolchains/: BUILD.bazel
toolchains/zig_cc/: BUILD.bazel
tools/: BUILD.bazel
tools/format/: BUILD.bazel  defs.bzl  elixir_formatter.ex  js_tool.bzl  runner.sh  zig.bzl
tools/git-hooks/: install.sh
tools/mc-abi-gate/: BUILD.bazel
tools/mc-attest/: BUILD.bazel
tools/mc-roster/: BUILD.bazel
tools/mc-stamp/: BUILD.bazel
tools/mc-svc-manifest/: BUILD.bazel
tools/size/: BUILD.bazel  defs.bzl
tools/smoke/: BUILD.bazel
tools/wasi-trampoline/: BUILD.bazel
tools/wasm-imports/: BUILD.bazel
tools/wasm_rust_smoke/: BUILD.bazel  lib.rs
wasi-adapter/: BUILD.bazel  defs.bzl
wasi-adapter/src/: lib.rs
web/: BUILD.bazel  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
web/src/: App.tsx  BookIntro.tsx  ConfirmDialog.tsx  CopyIcon.tsx  ExamplesShowcase.tsx  Hero.module.css  Hero.tsx  Icon.tsx  MarkerToc.tsx  ReferenceIntro.tsx  ReferenceShowcase.tsx  Showcase.module.css  browserArtifacts.ts  heroDemo.ts  index.css  main.tsx  mc-elements.d.ts  styles.css
web/tools/: tsc-check.mjs  vite.mjs
(+734 files in other folders)
