# Root package — the user-facing entry points (SYSTEMS.md).
#
# These aliases are the stable names the README and humans type; each resolves to
# whichever package currently owns the artifact, so callers never chase a moved
# target. They are enabled in Phase A as each target lands, keeping `bazel test
# //...` green at every step (B1):
#
#   alias(name = "kernel", actual = "//memcontainers/kernel/rust:kernel")  # //memcontainers/kernel:impl flips rust|zig
#   alias(name = "server", actual = "//server:mc-server")
#   alias(name = "e2e",    actual = "//memcontainers/tests/e2e:core")
#   alias(name = "web",    actual = "//web:app")
#
# The kernel-implementation selector (Phase B): one flag flips every kernel-
# consuming edge between the Rust and Zig builds, so the test matrix can run
# both from the same graph.
#   load("@bazel_skylib//rules:common_settings.bzl", "string_flag")
#   string_flag(name = "kernel_impl", build_setting_default = "rust", values = ["rust", "zig"])
#
# zig_index.json is referenced by MODULE.bazel's Zig toolchain pin.
exports_files([
    "README.md",
    "zig_index.json",
])

load("@aspect_rules_ts//ts:defs.bzl", "ts_config")

# The one shared TypeScript config for the whole JS workspace (hosts/js, sdk-js/, the contract TS
# descriptors). mc_ts_project (//bazel:ts.bzl) pins every TS target to this — one config, no drift.
ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    visibility = ["//visibility:public"],
)

load("@npm//:defs.bzl", "npm_link_all_packages")

# Link the root package's npm deps (typescript, @types/bun) into //:node_modules/* so the TS targets
# (the JS host, the @mc/* SDK) can depend on them.
npm_link_all_packages(name = "node_modules")

load("@aspect_bazel_lib//lib:write_source_files.bzl", "write_source_files")

write_source_files(
    name = "update-readme-badges",
    files = {
        "README.md": "//docs:readme_with_badges",
    },
    diff_test_failure_message = "README image-size badges are stale. Run `bazel run //docs:update-readme-badges`.",
    suggested_update_target = "//docs:update-readme-badges",
    visibility = ["//visibility:public"],
)
