"""agent-os — one build graph, zero staleness (VISION §7.1 / invariant B1).

Every artifact in this repo is a Bazel target with declared inputs; the packages
under this module declare those targets, and this file pins the toolchains they
build with. `agent-os` is the name of the *repository and build* and appears here
and nowhere else — the running system's identity is `mc`, frozen into the ABI
(VISION §8.2). Do not prefix anything `agent-os-*`.

Toolchains land in two waves so that `bazel test //...` is green at every step:
  - ACTIVE now: the validated wasm32-freestanding spine (platforms + Zig 0.16 +
    rules_cc) that both kernels and every guest compile against, plus skylib for
    build/diff tests.
  - PHASE-A lanes (Rust kernel/host/server/projector, the JS host + SDK, images,
    drift gates, the vendored C/C++ guests): declared as the VISION specifies but
    commented until the first target in each lane lands (then uncomment with it).
"""

module(name = "agent-os")

# ---------------------------------------------------------------------------
# ACTIVE — the validated core (bazel-experiments/compile-zig-wasm).
# ---------------------------------------------------------------------------
bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "rules_zig", version = "0.16.0")    # in from day one — C/C++ shim lane (§0.2)
bazel_dep(name = "rules_cc", version = "0.2.18")     # cc_import/cc_library for vendored headers
bazel_dep(name = "bazel_skylib", version = "1.9.0")  # build_test / diff_test / write_file

# Zig 0.16.0 toolchain, pinned via the local sha-locked index.
zig = use_extension("@rules_zig//zig:extensions.bzl", "zig")
zig.index(file = "//:zig_index.json")
zig.toolchain(zig_version = "0.16.0")
use_repo(zig, "zig_toolchains")

register_toolchains("@rules_zig//zig/target:all")
register_toolchains("@zig_toolchains//:all")

# Cross-compile-to-wasm zig toolchains: //platforms:wasm32_freestanding (kernels + pure guests, no
# libc) and //platforms:wasm32_wasi (the C/C++ domain tools — luau — whose C++ runtime needs zig's
# wasi-libc/libc++; the //wasi-adapter then rewrites the syscall imports to mc).
register_toolchains("//platforms:wasm32_freestanding_zig_toolchain")
register_toolchains("//platforms:wasm32_wasi_zig_toolchain")

# ---------------------------------------------------------------------------
# PHASE-A lanes — declared per VISION §7.1, enabled as each lane's first target
# lands. Every block below is intended-final shape, not a guess; uncomment the
# block together with the package that consumes it so green is preserved (B1).
# ---------------------------------------------------------------------------

# Rust — ACTIVE for the contracts projector (a dependency-light host tool: no external
# crates, so no crate_universe needed yet). The wasm kernel port and its crates arrive
# with crate_universe in Step 2 (§5.2).
bazel_dep(name = "rules_rust", version = "0.70.0")
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
# wasm32-unknown-unknown is the kernel's real rustc target (the VISION's "freestanding"
# is the Zig triple); the guests (sysroot/programs) compile there too. The host triple
# stays for the projector and the wasmtime host (native, autodetected). A musl target
# triple lands when the host goes static for distribution (§8.1) — deferred (see
# hosts/wasmtime/defs.bzl: it needs a libc constraint + a musl C toolchain, not just a
# triple, and the "match a prebuilt libwasmtime.a" premise is moot under source builds).
rust.toolchain(edition = "2021", extra_target_triples = ["wasm32-unknown-unknown", "wasm32-wasip1"])
use_repo(rust, "rust_toolchains")

# crate_universe — external crates.io deps, PINNED. The kernel (no_std, wasm32) and the
# host (std, native) resolve from SEPARATE lockfiles, on purpose: a single shared Cargo
# resolution feature-unifies their common deps and turns on std features (e.g.
# bitflags/std via wasmtime) that drag std's lang items into the no_std kernel and break
# it. So two pinned locks — each its own source of truth — rather than the single
# workspace lock VISION §7.1 first imagined (a candidate VISION refinement). The `abi`
# role is filled by the generated //contracts:*_rust bindings, not a crate.
crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//kernel/rust:Cargo.lock",
    manifests = ["//kernel/rust:Cargo.toml"],
)
crate.from_cargo(
    name = "host_crates",
    cargo_lockfile = "//hosts/wasmtime:Cargo.lock",
    manifests = ["//hosts/wasmtime:Cargo.toml"],
)
# The GUEST universe (no_std, wasm32-freestanding): the coreutils boxes + future guests
# resolve their external crates (talc; regex for grep; …) from a THIRD lock, kept apart from
# @crates (kernel) and @host_crates (host) for the same reason those two are split — a shared
# Cargo resolution would feature-unify std on and break the no_std guests (§7.1, §16.3).
crate.from_cargo(
    name = "guest_crates",
    cargo_lockfile = "//programs/coreutils:Cargo.lock",
    manifests = ["//programs/coreutils:Cargo.toml"],
)
use_repo(crate, "crates", "host_crates", "guest_crates")

# aspect_bazel_lib — write_source_files + diff_test for the contract drift gate (B2).
bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")

# JS/TS — the bun/browser host family (A3) and the @mc/* SDK (sdk-js/, hosts/js).
# bazel_dep(name = "aspect_rules_js", version = "2.X")
# bazel_dep(name = "aspect_rules_ts", version = "3.X")

# Images + contract drift gates.
bazel_dep(name = "rules_pkg", version = "1.0.1")  # pkg_tar — deterministic images, no manual staging
# bazel_dep(name = "aspect_bazel_lib", version = "2.X")  # write_source_files + diff_test (B2)

# Third-party guests — vendor LESS, patch in place (B3). Upstream SOURCE via http_archive (never a
# vendored copy in-tree); only the patch + BUILD file live under third_party/<lib>/.
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# sed — uutils `sed` v0.1.1 fetched from crates.io, WASI-patched (terminal_size stub + an -i fix)
# and built LIB-ONLY; the coreutils read-write box calls `sed::sed::uumain` (its own clap CLI).
http_archive(
    name = "uutils_sed",
    urls = ["https://static.crates.io/crates/sed/sed-0.1.1.crate"],
    sha256 = "f5a00cdbffacbccf02decb7577da5e298c091bdee492a2a1b87a3d8b0cc5b7c5",
    strip_prefix = "sed-0.1.1",
    type = "tar.gz",
    patches = ["//third_party/sed:patches/0001-wasi-compat.patch"],
    patch_tool = "patch",  # GNU patch; Bazel's native parser mis-handles the multi-file diff
    patch_args = ["-p1"],
    build_file = "//third_party/sed:sed.BUILD.bazel",
)

# http_archive(name = "sqlite",   urls = ["..."], sha256 = "...",
#              patches = ["//third_party/sqlite:patches/0001-mc.patch"],
#              build_file = "//third_party/sqlite:BUILD.sqlite.bazel")
# luau — upstream Luau 0.725 fetched from GitHub, patched `-fno-exceptions`-clean (the `// mc PATCH`
# set extracted to real .patch files: VM/Parser/Compiler trap-backed error channels + the Analysis
# EH shim, B3), built to two guest wasms (/bin/luau interpreter, /bin/luau-analyze type checker) by
# `zig c++` at wasm32-wasi. See third_party/luau/PLAN.md.
http_archive(
    name = "luau",
    urls = ["https://github.com/luau-lang/luau/archive/refs/tags/0.725.tar.gz"],
    sha256 = "e51ead5f541633693d548057e0431927f3036c13b185fdb37fbc3f5a261e6676",
    strip_prefix = "luau-0.725",
    type = "tar.gz",
    patches = [
        "//third_party/luau:patches/0001-mc-vm.patch",  # VM/Parser/Compiler → trap-backed error channels
        "//third_party/luau:patches/0002-mc-analysis.patch",  # Analysis throw → mc_analysis_abort
        "//third_party/luau:patches/0003-mc-analysis-named-catch.patch",  # dead named-catch bodies: drop e.what()
        "//third_party/luau:patches/0004-mc-frontend-nothread.patch",  # Frontend std::mutex + locks → mc_nothread (.h decl + .cpp uses; B3)
    ],
    patch_tool = "patch",  # GNU patch (matches sed; the native parser mis-handles multi-file diffs)
    patch_args = ["-p1"],
    build_file = "//third_party/luau:BUILD.luau.bazel",
)
# http_archive(name = "wasmtime", urls = ["..."], sha256 = "...")  # for hosts/wasmtime
