genrule(
    name = "image_size_badges_fragment",
    srcs = [
        "//memcontainers/images:atlas",
        "//memcontainers/images:loom",
        "//memcontainers/images:minimal",
        "//memcontainers/images:paper",
        "//memcontainers/images:posix",
    ],
    outs = ["image_size_badges.html"],
    cmd = "$(execpath //bazel/tools/readme-badges) fragment " +
          "minimal=$(execpath //memcontainers/images:minimal) " +
          "posix=$(execpath //memcontainers/images:posix) " +
          "loom=$(execpath //memcontainers/images:loom) " +
          "atlas=$(execpath //memcontainers/images:atlas) " +
          "paper=$(execpath //memcontainers/images:paper) > $@",
    tools = ["//bazel/tools/readme-badges"],
)

load("@aspect_rules_js//js:defs.bzl", "js_library", "js_test")

# The client reference is authored once, here, and consumed verbatim by the web
# reader. Keeping it in a public library makes the otherwise out-of-package
# Markdown an explicit Bazel edge of //web:app instead of an undeclared Vite read.
js_library(
    name = "reference_sources",
    srcs = glob(["*.md"]) + ["api-surface.json"],
    visibility = ["//visibility:public"],
)

# Docs are part of the API contract: all exported JS values must be classified,
# local links/anchors must resolve, and every ```js fence must be JavaScript (not
# TypeScript masquerading as a browser example).
js_test(
    name = "reference_test",
    data = [
        ":reference_sources",
        "//memcontainers/sdk-js/core:api_sources",
        "//memcontainers/sdk-js/elements:api_sources",
    ],
    entry_point = "tools/check.mjs",
)

genrule(
    name = "readme_with_badges",
    srcs = [
        "//:README.md",
        ":image_size_badges_fragment",
    ],
    outs = ["README.generated.md"],
    cmd = "$(execpath //bazel/tools/readme-badges) update " +
          "--readme $(location //:README.md) " +
          "--fragment $(location :image_size_badges_fragment) > $@",
    tools = ["//bazel/tools/readme-badges"],
    visibility = ["//visibility:public"],
)

alias(
    name = "update-readme-badges",
    actual = "//:update-readme-badges",
    visibility = ["//visibility:public"],
)

test_suite(
    name = "readme_badges_check",
    tests = ["//:update-readme-badges_test"],
    visibility = ["//visibility:public"],
)
